# rq

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rq-cli.yml  rq-core.yml
rq-cli/: Cargo.toml
rq-cli/src/: app.rs  main.rs  terminal.rs  test.http  ui.rs
rq-cli/src/components/: input.rs  menu.rs  message_dialog.rs  mod.rs  popup.rs  request_list.rs  response_panel.rs
rq-core/: Cargo.toml
rq-core/src/: grammar.pest  lib.rs  parser.rs  request.rs
rq-core/src/request/: decode.rs  mime.rs
