[package]
name = "rq-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rq-core = { path = "../rq-core" }

tui = "0.19"
crossterm = "0.24"
crossterm = "0.25"
tokio = { version = "1", features = ["full"] }
