[package]
name = "rq-core"
version = "0.1.0"
edition = "2021"
authors = ["Brian Mayo <protiumx@gmail.com>"]
description = "rq-core includes parser and request calls"
readme = "README.md"

[dependencies]
bytes = "1.5.0"
pest = "2.7.4"
pest_derive = "2.7.4"
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["json"] }
